--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,18 @@ services:
         container_name: nginx-proxy
         ports:
           - "80:80"
+          - "443:443"
         volumes:
+          - ./etc/nginx/certs:/etc/nginx/certs:ro
+          - ./etc/nginx/conf.d:/etc/nginx/conf.d
+          - ./etc/nginx/vhost.d:/etc/nginx/vhost.d 
+          - ./etc/nginx/html:/usr/share/nginx/html
           - /var/run/docker.sock:/tmp/docker.sock:ro
     lets-encrypt:
         image: jrcs/letsencrypt-nginx-proxy-companion
-        container_name: lets-encrypt
+        container_name: nginx-proxy-le
+        environment: 
+          - NGINX_PROXY_CONTAINER=nginx-proxy
         volumes:
           - ./etc/nginx/certs:/etc/nginx/certs:ro
           - ./etc/nginx/conf.d:/etc/nginx/conf.d
@@ -30,7 +37,7 @@ services:
             dockerfile: Dockerfile
     mysqldb:
         image: mysql:5.7.22
-        container_name: mysql
+        container_name: mysqldb
         restart: always
         env_file:
             - ".env"
@@ -39,6 +46,7 @@ services:
             - MYSQL_ROOT_PASSWORD=root
             - MYSQL_USER=root
             - MYSQL_PASSWORD=root
+            - TZ=America/New_York
         ports:
             - "3306:3306"
         volumes:
@@ -65,3 +73,5 @@ services:
           - "16381:6379"
         volumes:
             - "./etc/redis/redis_session.conf:/usr/local/etc/redis.conf"
+volumes:
+    etc:
