Use user www-data

--- a/etc/php/Dockerfile
+++ b/etc/php/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.2-fpm
 
 LABEL maintainer="David Tay <david.tay20@gmail.com>"
 
-RUN useradd -ms /bin/bash  www-data
+USER www-data
 
 RUN apt-get update && apt-get upgrade -y \
     g++ \
