--- a/etc/php/Dockerfile7.2
+++ b/etc/php/Dockerfile7.2
@@ -49,5 +49,11 @@ RUN apt-get update && apt-get upgrade -y \
     && apt-get autoremove -y --purge \
     && apt-get clean \
     && rm -Rf /tmp/*
+    
+RUN curl --connect-timeout 10 -o ioncube.tar.gz -fkSL "https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz"; \
+    tar -zxvf ioncube.tar.gz; \
+    cp ioncube/ioncube_loader_lin_7.2.so /usr/local/lib/php/extensions/no-debug-non-zts-20170718/ioncube.so; \
+#    rm -Rf ioncube*; \
+    echo "zend_extension=ioncube.so" > /usr/local/etc/php/conf.d/01-ioncube.ini;    
 
 USER www-data
