--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -65,3 +65,6 @@ opcache.memory_consumption=192
 opcache.max_wasted_percentage=10
 opcache.interned_strings_buffer=16
 opcache.fast_shutdown=1
+
+[mailhog]
+sendmail_path = /usr/bin/mhsendmail --smtp-addr mailhog:1025
