--- a/etc/php/Dockerfile7.1
+++ b/etc/php/Dockerfile7.1
@@ -37,8 +37,6 @@ RUN apt-get update && apt-get upgrade -y \
     && docker-php-ext-install gd \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
-#    && pecl install mcrypt-1.0.1 \
-#    && docker-php-ext-enable mcrypt \
     && docker-php-ext-install xsl \
     && yes '' | pecl install imagick && docker-php-ext-enable imagick \
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
@@ -53,12 +51,12 @@ RUN apt-get update && apt-get upgrade -y \
 RUN curl --connect-timeout 10 -o ioncube.tar.gz -fkSL "https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz"; \
     tar -zxvf ioncube.tar.gz; \
     cp ioncube/ioncube_loader_lin_7.1.so /usr/local/lib/php/extensions/no-debug-non-zts-20160303/ioncube.so; \
-#    rm -Rf ioncube*; \
     echo "zend_extension=ioncube.so" > /usr/local/etc/php/conf.d/01-ioncube.ini;
 
 RUN curl -sS https://getcomposer.org/installer | php \
-        && mv composer.phar /usr/local/bin/ \
-        && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer
+    && mv composer.phar /usr/local/bin/ \
+    && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer \
+    && composer self-update 1.10.17
 
 RUN curl -O -J -L https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 \
     && chmod +x mhsendmail_linux_amd64 \
@@ -67,6 +65,7 @@ RUN curl -O -J -L https://github.com/mailhog/mhsendmail/releases/download/v0.2.0
 RUN curl -O https://files.magerun.net/n98-magerun2.phar \
         && chmod +x n98-magerun2.phar && mv n98-magerun2.phar /usr/local/bin/ 
 
-RUN chown -R www-data:www-data /var/www
+RUN addgroup --gid 1000 user
+RUN adduser --disabled-password --gecos '' --uid 1000 --gid 1000 user
 
-USER www-data
+USER user
