--- a/etc/php/Dockerfile7.4
+++ b/etc/php/Dockerfile7.4
@@ -1,4 +1,4 @@
-FROM php:7.0-fpm
+FROM php:7.4-fpm
 
 LABEL maintainer="David Tay <david.tay20@gmail.com>"
 
@@ -18,6 +18,9 @@ RUN apt-get update && apt-get upgrade -y \
     libssl-doc \
     libsasl2-dev \
     libxslt1-dev \
+    libonig-dev \
+    libzip-dev \
+    procps \
     zlib1g-dev \
     vim \
     && docker-php-ext-install \
@@ -25,15 +28,13 @@ RUN apt-get update && apt-get upgrade -y \
     bz2 \
     iconv \
     mbstring \
-    mcrypt \
     mysqli \
     pdo_mysql \
     soap \
+    sockets \
     zip \
     && docker-php-ext-configure gd \
-    --with-freetype-dir=/usr/include/ \
-    --with-jpeg-dir=/usr/include/ \
-    --with-png-dir=/usr/include/ \
+    --with-freetype --with-jpeg \
     && docker-php-ext-install gd \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
@@ -42,33 +43,35 @@ RUN apt-get update && apt-get upgrade -y \
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
     && docker-php-ext-install imap \
     && docker-php-ext-install opcache \
+    && docker-php-ext-enable sodium \
     && pecl install redis && docker-php-ext-enable redis \
     && pecl install xdebug && docker-php-ext-enable xdebug \
     && apt-get autoremove -y --purge \
     && apt-get clean \
     && rm -Rf /tmp/*
+    
+#RUN curl --connect-timeout 10 -o ioncube.tar.gz -fkSL "https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz"; \
+#    tar -zxvf ioncube.tar.gz; \
+#    cp ioncube/ioncube_loader_lin_7.4.so /usr/local/lib/php/extensions/no-debug-non-zts-20190902/ioncube.so; \
+#    rm -Rf ioncube*; \
+#    echo "zend_extension=ioncube.so" > /usr/local/etc/php/conf.d/01-ioncube.ini;
 
-RUN curl --connect-timeout 10 -o ioncube.tar.gz -fkSL "https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz"; \
-    tar -zxvf ioncube.tar.gz; \
-    cp ioncube/ioncube_loader_lin_7.0.so /usr/local/lib/php/extensions/no-debug-non-zts-20151012/ioncube.so; \
-    echo "zend_extension=ioncube.so" > /usr/local/etc/php/conf.d/01-ioncube.ini;
-
-RUN curl https://getcomposer.org/installer | php \
+RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/ \
     && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer \
     && composer self-update 1.10.17
 
-RUN curl -O -J -L https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 \
+RUN curl -O -J -L https://github.com/mailhog/mhsendmail/releases/download/v0.2.1/mhsendmail_linux_amd64 \
     && chmod +x mhsendmail_linux_amd64 \
     && mv mhsendmail_linux_amd64 /usr/local/bin/mhsendmail
 
 RUN curl -O https://files.magerun.net/n98-magerun2.phar \
     && chmod +x n98-magerun2.phar && mv n98-magerun2.phar /usr/local/bin/ 
 
+RUN echo "deb http://deb.debian.org/debian stretch-backports main" >> /etc/apt/sources.list 
+
 RUN addgroup --gid 1000 user
 RUN adduser --disabled-password --gecos '' --uid 1000 --gid 1000 user
 
 USER user
-
-
 
