--- a/etc/php/Dockerfile7.1
+++ b/etc/php/Dockerfile7.1
@@ -43,7 +43,7 @@ RUN apt-get update && apt-get upgrade -y \
     && docker-php-ext-install imap \
     && docker-php-ext-install opcache \
     && pecl install redis && docker-php-ext-enable redis \
-    && pecl install xdebug && docker-php-ext-enable xdebug \
+    && pecl install xdebug-2.9.8 && docker-php-ext-enable xdebug \
     && apt-get autoremove -y --purge \
     && apt-get clean \
     && rm -Rf /tmp/*
