--- a/etc/elasticsearch/Dockerfile7
+++ b/etc/elasticsearch/Dockerfile7
@@ -1,4 +1,5 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:7.9.2
 
-RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu && \ 
- /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-phonetic
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu 
+ 
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-phonetic
