--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,9 @@ services:
             dockerfile: Dockerfile7.1
         command: echo "Image only, not started by default."
     mysqldb:
-        image: mysql:5.7.22
+        image: mysql:8.0.23
+        cap_add:
+            - SYS_NICE
         container_name: mysqldb
         restart: always
         env_file:
@@ -61,7 +63,7 @@ services:
             - "./data/db/mysql:/var/lib/mysql"
             - "./etc/mysql/conf.d:/etc/mysql/conf.d"
     redis:
-        image: redis:4.0.11
+        image: redis:5.0.6
         container_name: redis
         restart: always
         ports:
@@ -69,7 +71,7 @@ services:
         volumes:
             - "./etc/redis/redis.conf:/usr/local/etc/redis.conf"
     redis_fpc:
-        image: redis:4.0.11
+        image: redis:5.0.6
         container_name: redis_fpc
         restart: always
         ports:
@@ -77,7 +79,7 @@ services:
         volumes:
             - "./etc/redis/redis_fpc.conf:/usr/local/etc/redis.conf"
     redis_session:
-        image: redis:4.0.11
+        image: redis:5.0.6
         container_name: redis_session
         restart: always
         ports:
