--- a/etc/elasticsearch/Dockerfile6
+++ b/etc/elasticsearch/Dockerfile6
@@ -1,3 +1,9 @@
 FROM blacktop/elasticsearch:6.8
-RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu && \ 
- /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-phonetic
+
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin remove analysis-icu
+ 
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin remove analysis-phonetic
+
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
+ 
+RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-phonetic
