--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -1,3 +1,4 @@
+# nginx-proxy version : 1.0.1-4-g70d33d9
 # If we receive X-Forwarded-Proto, pass it through; otherwise, pass along the
 # scheme used to connect to this server
 map $http_x_forwarded_proto $proxy_x_forwarded_proto {
@@ -20,16 +21,21 @@ map $http_upgrade $proxy_connection {
 server_names_hash_bucket_size 128;
 # Default dhparam
 ssl_dhparam /etc/nginx/dhparam/dhparam.pem;
-# Set appropriate X-Forwarded-Ssl header
-map $scheme $proxy_x_forwarded_ssl {
+# Set appropriate X-Forwarded-Ssl header based on $proxy_x_forwarded_proto
+map $proxy_x_forwarded_proto $proxy_x_forwarded_ssl {
   default off;
   https on;
 }
 gzip_types text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 log_format vhost '$host $remote_addr - $remote_user [$time_local] '
                  '"$request" $status $body_bytes_sent '
-                 '"$http_referer" "$http_user_agent"';
+                 '"$http_referer" "$http_user_agent" '
+                 '"$upstream_addr"';
 access_log off;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+		ssl_prefer_server_ciphers off;
+error_log /dev/stderr;
 resolver 127.0.0.11;
 # HTTP 1.1 support
 proxy_http_version 1.1;
@@ -42,11 +48,360 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 proxy_set_header X-Forwarded-Ssl $proxy_x_forwarded_ssl;
 proxy_set_header X-Forwarded-Port $proxy_x_forwarded_port;
+proxy_set_header X-Original-URI $request_uri;
 # Mitigate httpoxy attack (see README for details)
 proxy_set_header Proxy "";
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
+	server_tokens off;
 	listen 80;
 	access_log /var/log/nginx/access.log vhost;
 	return 503;
+}
+	# chrome.local
+upstream chrome.local {
+        ## Can be connected with "magento" network
+        # chrome
+        server 172.18.0.13:80;
+}
+server {
+	server_name chrome.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	location / {
+		proxy_pass http://chrome.local;
+}
+}
+	# lc.commerce.site
+upstream lc.commerce.site {
+        ## Can be connected with "magento" network
+        # commerce_nginx
+        server 172.18.0.8:443;
+}
+server {
+	server_name lc.commerce.site;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name lc.commerce.site;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/lc.commerce.site.crt;
+	ssl_certificate_key /etc/nginx/certs/lc.commerce.site.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://lc.commerce.site;
+}
+}
+	# or.toolweb.local
+upstream or.toolweb.local {
+        ## Can be connected with "magento" network
+        # oreilly_nginx
+        server 172.18.0.11:443;
+}
+server {
+	server_name or.toolweb.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name or.toolweb.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/or.toolweb.local.crt;
+	ssl_certificate_key /etc/nginx/certs/or.toolweb.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://or.toolweb.local;
+}
+}
+	# salespad.isnweb.local
+upstream salespad.isnweb.local {
+        ## Can be connected with "magento" network
+        # salespad_nginx
+        server 172.18.0.5:443;
+}
+server {
+	server_name salespad.isnweb.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name salespad.isnweb.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/salespad.isnweb.local.crt;
+	ssl_certificate_key /etc/nginx/certs/salespad.isnweb.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://salespad.isnweb.local;
+}
+}
+	# white-label.isnweb.local
+upstream white-label.isnweb.local {
+        ## Can be connected with "magento" network
+        # whitelabel_nginx
+        server 172.18.0.20:443;
+}
+server {
+	server_name white-label.isnweb.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name white-label.isnweb.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/white-label.isnweb.local.crt;
+	ssl_certificate_key /etc/nginx/certs/white-label.isnweb.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://white-label.isnweb.local;
+}
+}
+	# www.advanceautotools.local
+upstream www.advanceautotools.local {
+        ## Can be connected with "magento" network
+        # advanceautotools_nginx
+        server 172.18.0.4:443;
+}
+server {
+	server_name www.advanceautotools.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name www.advanceautotools.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/www.advanceautotools.local.crt;
+	ssl_certificate_key /etc/nginx/certs/www.advanceautotools.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://www.advanceautotools.local;
+}
+}
+	# www.atdautotools.local
+upstream www.atdautotools.local {
+        ## Can be connected with "magento" network
+        # atdautotools_nginx
+        server 172.18.0.2:443;
+}
+server {
+	server_name www.atdautotools.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name www.atdautotools.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/www.atdautotools.local.crt;
+	ssl_certificate_key /etc/nginx/certs/www.atdautotools.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://www.atdautotools.local;
+}
+}
+	# www.autoplustools.local
+upstream www.autoplustools.local {
+        ## Can be connected with "magento" network
+        # autoplustools_nginx
+        server 172.18.0.10:443;
+}
+server {
+	server_name www.autoplustools.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name www.autoplustools.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/www.autoplustools.local.crt;
+	ssl_certificate_key /etc/nginx/certs/www.autoplustools.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://www.autoplustools.local;
+}
+}
+	# www.ktoolinternational.local
+upstream www.ktoolinternational.local {
+        ## Can be connected with "magento" network
+        # ktool_nginx
+        server 172.18.0.17:443;
+}
+server {
+	server_name www.ktoolinternational.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name www.ktoolinternational.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/www.ktoolinternational.local.crt;
+	ssl_certificate_key /etc/nginx/certs/www.ktoolinternational.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://www.ktoolinternational.local;
+}
+}
+	# www.pepexpresstools.local
+upstream www.pepexpresstools.local {
+        ## Can be connected with "magento" network
+        # pepexpresstools_nginx
+        server 172.18.0.9:443;
+}
+server {
+	server_name www.pepexpresstools.local;
+	listen 80 ;
+	access_log /var/log/nginx/access.log vhost;
+	# Do not HTTPS redirect Let'sEncrypt ACME challenge
+	location ^~ /.well-known/acme-challenge/ {
+		auth_basic off;
+		auth_request off;
+		allow all;
+		root /usr/share/nginx/html;
+		try_files $uri =404;
+		break;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+server {
+	server_name www.pepexpresstools.local;
+	listen 443 ssl http2 ;
+	access_log /var/log/nginx/access.log vhost;
+	ssl_session_timeout 5m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_tickets off;
+	ssl_certificate /etc/nginx/certs/www.pepexpresstools.local.crt;
+	ssl_certificate_key /etc/nginx/certs/www.pepexpresstools.local.key;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+	location / {
+		proxy_pass https://www.pepexpresstools.local;
+}
 }
