--- a/etc/elasticsearch/config/elasticsearch7.yml
+++ b/etc/elasticsearch/config/elasticsearch7.yml
@@ -7,3 +7,5 @@ network.host: 0.0.0.0
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 discovery.seed_hosts: ["127.0.0.1"]
 discovery.type: single-node
+http.cors.enabled: true
+http.cors.allow-origin: "/http?://localhost(:[0-9]+)?/" 
