--- a/etc/nginx/certs/server.cnf
+++ b/etc/nginx/certs/server.cnf
@@ -16,17 +16,16 @@ x509_extensions    = x509_ext
 # Note that the following are in 'reverse order' to what you'd expect to see.
 
 countryName = US
-organizationName = My Company
-commonName = www.mysite.local
+organizationName = ToolWeb
+commonName = www.toolweb.local
 
 [ x509_ext ]
 
 keyUsage=critical,digitalSignature,keyAgreement
-
+extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 
 # Multiple Alternate Names are possible
 [alt_names]
-DNS.1 = www.mysite.local
+DNS.1 = www.toolweb.local
 # DNS.2 = altName.example.com
-
