--- a/etc/php/Dockerfile8.1
+++ b/etc/php/Dockerfile8.1
@@ -1,8 +1,9 @@
-FROM php:7.4.23-fpm
+FROM php:8.1.3-fpm
 
 LABEL maintainer="David Tay <david.tay20@gmail.com>"
 
 RUN apt-get update && apt-get upgrade -y \
+    cron \
     g++ \
     git \
     libc-client-dev \
@@ -50,12 +51,6 @@ RUN apt-get update && apt-get upgrade -y \
     && apt-get clean \
     && rm -Rf /tmp/*
     
-#RUN curl --connect-timeout 10 -o ioncube.tar.gz -fkSL "https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz"; \
-#    tar -zxvf ioncube.tar.gz; \
-#    cp ioncube/ioncube_loader_lin_7.4.so /usr/local/lib/php/extensions/no-debug-non-zts-20190902/ioncube.so; \
-#    rm -Rf ioncube*; \
-#    echo "zend_extension=ioncube.so" > /usr/local/etc/php/conf.d/01-ioncube.ini;
-
 RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/ \
     && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer \
