--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -37,34 +37,20 @@ memory_limit = 1024M
 
 ;Eclipse
 ;[Xdebug]
-xdebug.profiler_enable=0    
-xdebug.remote_enable=1
-xdebug.remote_autostart=0
-xdebug.remote_connect_back=0
-;xdebug.remote_log=/var/log/xdebug.log
-xdebug.remote_handler=dbgp
-xdebug.remote_mode=req
-xdebug.remote_host=10.0.2.2
-xdebug.remote_port=9001
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.discover_client_host=0
+;xdebug.log=/var/log/xdebug.log
+xdebug.start_with_request=yes
+xdebug.client_host=172.17.0.1
+xdebug.client_port=9001
 xdebug.max_nesting_level=300
 xdebug.remote_cookie_expire_time=31536000
-xdebug.idekey=ECLIPSE_DBGP
+xdebug.idekey=XDEBUG_ECLIPSE
 
-[mysqld]
+[mysqld] addres
 mysql.connect_timeout = 300
 default_socket_timeout = 300
 
-[opcache]
-opcache.enable=1
-; 0 means it will check on every request
-; 0 is irrelevant if opcache.validate_timestamps=0 which is desirable in production
-opcache.revalidate_freq=0
-opcache.validate_timestamps=1
-opcache.max_accelerated_files=10000
-opcache.memory_consumption=192
-opcache.max_wasted_percentage=10
-opcache.interned_strings_buffer=16
-opcache.fast_shutdown=1
-
-[mailhog]
-sendmail_path = /usr/bin/mhsendmail --smtp-addr mailhog:1025
+[mail]
+sendmail_path='/usr/local/bin/mhsendmail --from="Mysite Local <david.tay20@gmail.com>" --smtp-addr="mailhog:1025"'
