Added mysite example and default backend

--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -24,16 +24,16 @@ memory_limit = 1024M
 ;xdebug.idekey=PHPSTORM
 ;xdebug.profiler_enable=0
 ;xdebug.max_nesting_level=700
-;xdebug.remote_host=172.0.0.1 # your ip
-;xdebug.remote_port=9000
+;xdebug.remote_host=172.17.0.1 # host ip
+;xdebug.remote_port=9001
 
 ;Netbeans
 ;[Xdebug]
 ;xdebug.remote_enable=1
 ;xdebug.remote_handler=dbgp
 ;xdebug.remote_mode=req
-;xdebug.remote_host=172.0.0.1 # your ip
-;xdebug.remote_port=9000
+;xdebug.remote_host=172.17.0.1 # host ip
+;xdebug.remote_port=9001
 
 ;Eclipse
 ;[Xdebug]
