--- a/.env
+++ b/.env
@@ -9,3 +9,14 @@ MYSQL_TZ=America/New_York
 CHROME_VIRTUAL_HOST=chrome.local
 CHROME_VIRTUAL_PROTO=http
 CHROME_VIRTUAL_PORT=80
+
+;Nginx
+NGINX_CONTAINER=mysite_nginx
+VIRTUAL_HOST=www.mysite.local
+VIRTUAL_PROTO=https
+VIRTUAL_PORT=443
+
+;PHP 
+PHP_VERSION=8.1
+PHP_CONTAINER=mysite_php
+LOCAL_PORT=19000
