--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,39 @@ networks:
         external:
            name: magento
 services:
+    mysite_nginx: 
+        image: nginx:alpine
+        container_name: ${NGINX_CONTAINER}
+        restart: always
+        volumes:
+          - ./html:/var/www/html
+          - ./etc/nginx/magento-nginx.conf:/etc/nginx/magento-nginx.conf
+          - ./etc/nginx/certs:/etc/nginx/certs
+          - ./etc/nginx/conf.d/default.template:/etc/nginx/conf.d/default.template
+          - ./etc/nginx/conf.d/proxy-settings.conf:/etc/nginx/conf.d/proxy-settings.conf
+          - ./etc/nginx/scripts:/etc/nginx/scripts
+        expose:
+          - "80"
+          - "443"
+        environment:
+          VIRTUAL_HOST: ${VIRTUAL_HOST}
+          VIRTUAL_PROTO: ${VIRTUAL_PROTO}
+          VIRTUAL_PORT: ${VIRTUAL_PORT}
+          PHP_CONTAINER: ${PHP_CONTAINER}
+        depends_on:
+          - mysite_php
+        command: /bin/sh /etc/nginx/scripts/start-nginx.sh
+    mysite_php: 
+        image: magento/php${PHP_VERSION}
+        container_name: ${PHP_CONTAINER}
+        restart: always
+        ports: 
+          - "${LOCAL_PORT}:9000"
+        volumes:
+          - ./etc/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+          - ./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini
+          - ./etc/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+          - ./html:/var/www/html:delegated
     varnish:
         image: varnish:stable
         container_name: varnish
@@ -18,6 +51,8 @@ services:
           - /var/lib/varnish:exec
         environment:
           - VARNISH_SIZE=2G  
+        depends_on:
+            - mysite_nginx
         command: "-p default_keep=300"
     hitch:
         image: hitch:latest
