Change mysite example to port 80

--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ CHROME_VIRTUAL_PORT=80
 ;Nginx
 NGINX_CONTAINER=mysite_nginx
 VIRTUAL_HOST=www.mysite.local
-VIRTUAL_PROTO=https
-VIRTUAL_PORT=443
+VIRTUAL_PROTO=http
+VIRTUAL_PORT=80
 
 ;PHP 
 PHP_VERSION=8.1
