Added selenium, magento varnish config, opensearch

--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -11,6 +11,7 @@ php_admin_flag[log_errors]=On
 error_reporting = E_ALL
 log_errors = On
 error_log = /dev/stderr
+;zend.exception_string_param_max_len=120
 
 ; Memory
 memory_limit = 1024M
