--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
           - VARNISH_SIZE=2G  
         depends_on:
             - mysite_nginx
-        command: "-p default_keep=300"
+        command: "-p default_keep=300 -p http_max_hdr=128"
     hitch:
         image: hitch:latest
         container_name: hitch
@@ -65,19 +65,6 @@ services:
          - "443:443" 
         depends_on:
           - "varnish"
-#    nginx-proxy:
-#        image: jwilder/nginx-proxy:alpine
-#        container_name: nginx-proxy
-#        restart: always
-#        ports:
-#          - "80:80"
-#          - "443:443"
-#        volumes:
-#          - ./etc/nginx/certs:/etc/nginx/certs:ro
-#          - ./etc/nginx/conf.d:/etc/nginx/conf.d
-#          - ./etc/nginx/vhost.d:/etc/nginx/vhost.d 
-#          - ./etc/nginx/html:/usr/share/nginx/html
-#          - /var/run/docker.sock:/tmp/docker.sock:ro
     php8.1:
         container_name: php8.1
         user: "1000:1000"
@@ -94,6 +81,13 @@ services:
             context: ./etc/php
             dockerfile: Dockerfile7.4
         command: echo "Image only, not started by default."
+    selenium:
+        container_name: selenium
+        image: selenium/standalone-chrome:4.3.0-20220628
+        extra_hosts:
+         - "www.mysite.local:172.17.0.1"
+        ports:
+         - 4444:4444
     mysqldb:
         image: mysql:8.0.28
         cap_add:
@@ -144,13 +138,14 @@ services:
         ports:
           - "1025:1025"
           - "8025:8025"
-    elasticsearch7:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-        container_name: es7
+    opensearch:
+        image: opensearchproject/opensearch:latest
+        container_name: opensearch
         environment:
-          - node.name=es7
-          - bootstrap.memory_lock=true
-          - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+          - node.name=opensearch
+          - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
+          - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+          - DISABLE_SECURITY_PLUGIN=true
         ulimits:
           memlock:
             soft: -1
@@ -160,13 +155,38 @@ services:
             hard: 65536
         restart: always
         build:
-            context: ./etc/elasticsearch
-            dockerfile: Dockerfile7
+            context: ./etc/opensearch
+            dockerfile: Dockerfile
         volumes:
-          - "./data/es/es7:/usr/share/elasticsearch/data"
-          - "./etc/elasticsearch/config/elasticsearch7.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
+          - "./data/opensearch:/usr/share/opensearch/data"
+          - "./etc/opensearch/logs:/usr/share/opensearch/logs"
+          - "./etc/opensearch/config/opensearch.yml:/usr/share/opensearch/config/opensearch.yml"
         ports:
-          - 19200:9200
+          - 19201:9200
+          - 9600:9600
+#    elasticsearch7:
+#        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
+#        container_name: es7
+#        environment:
+#          - node.name=es7
+#          - bootstrap.memory_lock=true
+#          - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+#        ulimits:
+#          memlock:
+#            soft: -1
+#            hard: -1
+#          nofile:
+#            soft: 65536
+#            hard: 65536
+#        restart: always
+#        build:
+#            context: ./etc/elasticsearch
+#            dockerfile: Dockerfile7
+#        volumes:
+#          - "./data/es/es7:/usr/share/elasticsearch/data"
+#          - "./etc/elasticsearch/config/elasticsearch7.yml:/usr/share/elasticsearch/config/elasticsearch.yml"
+#        ports:
+#          - 19200:9200
     elasticsearch-head:
         image: mobz/elasticsearch-head:5
         container_name: es7-head
